# MyHermes

./: .gitignore  INSTALL.md  README.md  push-to-github.sh
skills/agent-harness/agent-guardrails-security/: SKILL.md
skills/agent-harness/agent-observability-ops/: SKILL.md
skills/agent-harness/agent-protocols/: SKILL.md
skills/agent-harness/evaluation-harness/: SKILL.md
skills/agent-harness/guardrails-ai/: SKILL.md
skills/agent-harness/langgraph-patterns/: SKILL.md
skills/agent-harness/observability-llm/: SKILL.md
skills/agent-harness/prompt-testing/: SKILL.md
skills/agent-harness/sandbox-execution/: SKILL.md
skills/agent-harness/shared-references/: SKILL.md
skills/auto-mempalace/: SKILL.md
skills/automate-news/: SKILL.md
skills/execute-code-for-file-edits/: SKILL.md
skills/fetch_github_readme/: SKILL.md
skills/multi-agent-orchestration/: SKILL.md
skills/obsidian-second-brain/: SKILL.md
skills/openclaw-learnings/: IMPLEMENT_PLAN.md  SKILL.md  pyproject.toml
skills/openclaw-learnings/omk/: __init__.py  __main__.py  analytics.py  cli.py  dashboard.py  metrics.py  monitor.py  subagent.py  views.py
skills/openclaw-learnings/omk/ui/: __init__.py  colors.py  tables.py  widgets.py
skills/openclaw-learnings/references/: cost-patterns.md  omk-cli-development.md  omk-implementation.md  prompt-patterns.md  session-patterns.md
skills/setup-local-model-ollama/: SKILL.md
skills/skill-create-workaround/: SKILL.md
skills/skill-management-workflow/: SKILL.md
skills/socraticode-context/: SKILL.md
skills/token-management-subagent/: SKILL.md
(+203 files in other folders)
